fixes footer overlapping card on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ h2 {
 }
 
 .empty-div {
-  height: 100px;
+  height: 40px;
 }
 
 .set-name {
